# ICB

./: .commitlintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  diff.html  package-lock.json  release-please-config.json  report.html  requirements-dev.txt
.cargo/: config.toml
.github/workflows/: audit.yml  benchmarks.yml  ci.yml  codeql.yml  docs.yml  perf.yml  release-please.yml
benches/icb-clang/: Cargo.toml  common.rs  deeply_nested.rs  many_calls.rs  parse_benchmark.rs  real_project_parallel.rs  real_project_sequential.rs  single_large_file.rs  system_headers.rs
benches/icb-clang/src/: lib.rs
benches/icb-graph/: Cargo.toml  build_graph.rs  common.rs  full_analysis.rs  resolve_calls.rs
benches/icb-graph/src/: lib.rs
benches/icb-parser/: Cargo.toml  common.rs  deeply_nested.rs  many_calls.rs  real_project.rs  single_large_file.rs
benches/icb-rustc/: Cargo.toml  common.rs  deeply_nested.rs  many_calls.rs  single_large_file.rs
benches/icb-server/: Cargo.toml  analytics_metrics.rs  common.rs  graph_serialization.rs  graph_subgraph.rs  real_project_pipeline.rs
crates/icb-clang/: Cargo.toml
crates/icb-clang/crates/icb-clang/: CHANGELOG.md
crates/icb-clang/examples/: profile_project.rs
crates/icb-clang/src/: lib.rs  parser.rs  project.rs
crates/icb-cli/: Cargo.toml
crates/icb-cli/crates/icb-cli/: CHANGELOG.md
crates/icb-cli/src/: main.rs
crates/icb-common/: Cargo.toml
crates/icb-common/src/: lib.rs
crates/icb-core/: Cargo.toml
crates/icb-graph/: Cargo.toml
crates/icb-graph/crates/icb-graph/: CHANGELOG.md
crates/icb-graph/src/: analysis.rs  builder.rs  cache.rs  graph.rs  lib.rs  query.rs  visualizer.rs
crates/icb-parser/: Cargo.toml
crates/icb-parser/crates/icb-parser/: CHANGELOG.md
crates/icb-parser/src/: cpp_tree_sitter.rs  facts.rs  heuristic_parser.rs  lib.rs  manager.rs
crates/icb-parser/src/lang/: common.rs  go.rs  mod.rs  python.rs  ruby.rs  rust.rs
crates/icb-report/: Cargo.toml
crates/icb-report/crates/icb-report/: CHANGELOG.md
crates/icb-report/src/: diff.rs  lib.rs  report.rs  template_report.html
crates/icb-rustc/: Cargo.toml
crates/icb-rustc/src/: driver.rs  lib.rs  visitor.rs
crates/icb-server/: Cargo.toml
crates/icb-server/crates/icb-server/: CHANGELOG.md
crates/icb-server/src/: analytics.rs  diff.rs  display_name.rs  graph_builder.rs  incremental_cache.rs  lib.rs  main.rs  routes.rs  upload.rs
docs/: benchmarks.html  guide.html  index.html
docs/bench-data/: baseline.json  latest.json
main/: crates.js  help.html  index.html  settings.html  src-files.js
main/generate_bench_json/: all.html  fn.main.html  fn.parse_bencher_line.html  index.html  sidebar-items.js  struct.BenchEntry.html
main/icb_clang/: all.html  index.html  sidebar-items.js
main/icb_clang/parser/: fn.parse_cpp_file.html  index.html
main/icb_clang/project/: fn.parse_directory.html  fn.parse_project.html  index.html  sidebar-items.js
main/icb_clang_bench/: all.html  index.html
main/icb_clang_benchmarks/: all.html  index.html
main/icb_cli/: all.html  enum.Command.html  fn.build_file_facts.html  fn.build_or_load_graph.html  fn.build_project_graph.html  fn.main.html  fn.parse_language.html  fn.print_callees.html  fn.print_callers.html  fn.print_complexity.html  fn.print_cycles.html  fn.print_dead_code.html  fn.print_functions.html  fn.print_unused.html  index.html  sidebar-items.js  struct.BuildOptions.html  struct.Cli.html
main/icb_common/: all.html  enum.IcbError.html  enum.Language.html  enum.NodeKind.html  index.html  sidebar-items.js
main/icb_core/: all.html  fn.add.html  index.html
main/icb_core/parser/: index.html
main/icb_graph/: all.html  index.html  sidebar-items.js
main/icb_graph/analysis/: fn.detect_call_cycles.html  fn.detect_complex_functions.html  fn.detect_dead_code.html  index.html  sidebar-items.js  struct.CallCycle.html  struct.ComplexityRecord.html  struct.ComplexityReport.html
main/icb_graph/builder/: index.html  struct.GraphBuilder.html
main/icb_graph/cache/: fn.load_graph.html  fn.save_graph.html  index.html  sidebar-items.js
main/icb_graph/graph/: enum.Edge.html  index.html  sidebar-items.js  struct.Node.html  (+3 more)
main/icb_graph_benchmarks/: all.html  index.html
main/icb_parser/: all.html  index.html  sidebar-items.js
main/icb_parser_benchmarks/: all.html  index.html
main/icb_report/: all.html  index.html  sidebar-items.js
main/icb_server/: all.html  fn.build_or_load_graph.html  fn.find_node_index_by_name.html  fn.focal_graph.html  fn.get_graph.html  fn.get_node_detail.html  fn.main.html  fn.parse_language.html  fn.subgraph_by_kind.html  index.html  sidebar-items.js  struct.Cli.html  struct.GraphQuery.html  struct.NodeDetail.html
main/icb_server_benchmarks/: all.html  index.html
main/search.index/: 0055d34e47de.js  0077f77dc97f.js  0081e0bfcf3e.js  00b58f82c350.js  01d9962cc556.js  020f5b476101.js  0260179dbca1.js  02f6cdb9db1b.js  044f8603307a.js  047d2d195744.js  04c9a72a135f.js  051724c203c7.js  064ac4a49678.js  072dca521e56.js  08058f486a16.js  0919b069f9da.js  099bbad2483b.js  09eeda91a08f.js  0a013160769f.js  0a78e0928b44.js  0a7ccf67be08.js  0a90aec545b1.js  0ac3aee9a793.js  0ac8a832e6a3.js  0af4e30dd853.js  0ba3bba4cbaa.js  0bdcab873e81.js  0bed14843242.js  0c92ccadaa4a.js  0d2385afc556.js  0d76fce82515.js  0d854cce2b61.js  0e3771e347b2.js  0e453d15917e.js  0e52948876ff.js  0e6d6789c3f8.js  0e8a58f6d245.js  0efbd98c9b0c.js  0f23fcb96b76.js  0f3917a96ac4.js  (+324 more)
scripts/benchmark-regression-check/: Cargo.toml
scripts/generate-bench-json/: Cargo.toml
scripts/perf-engine/: Cargo.toml
test-projects/cpp_demo/: main.cpp  utils.h
test-projects/cpp_demo2/: compile_commands.json  main.cpp  utils.cpp
test-projects/go_demo/: go.mod  main.go
test-projects/nim_demo/: main.nim  types.nim
test-projects/python_demo/: main.py  model.py  utils.py
test-projects/ruby_demo/: main.rb
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
(+281 files in other folders)
