[workspace]
resolver = "2"
members = [
    "crates/icb-common",
    "crates/icb-parser",
    "crates/icb-graph",
    "crates/icb-clang",
    "crates/icb-cli",
    "crates/icb-server",
    "crates/icb-report",
    "benches/icb-clang",
    "benches/icb-graph",
    "benches/icb-server",
    "benches/icb-parser",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
petgraph = "0.8"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
rayon = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
