[package]
name = "icb-clang-bench"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
icb-clang = { path = "../../crates/icb-clang" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_benchmark"
harness = false
path = "parse_benchmark.rs"