[package]
name = "icb-rustc-benchmarks"
version = "0.8.12"
edition = "2021"
publish = false

[dependencies]
icb-rustc = { path = "../../crates/icb-rustc" }
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bench]]
name = "single_large_file"
harness = false
path = "single_large_file.rs"

[[bench]]
name = "deeply_nested"
harness = false
path = "deeply_nested.rs"

[[bench]]
name = "many_calls"
harness = false
path = "many_calls.rs"