[package]
name = "icb-server-benchmarks"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
icb-server = { path = "../../crates/icb-server" }
icb-graph = { path = "../../crates/icb-graph" }
icb-common = { path = "../../crates/icb-common" }
icb-clang = { path = "../../crates/icb-clang" }
icb-parser = { path = "../../crates/icb-parser" }
serde_json = "1"
fastrand = "2"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analytics_metrics"
harness = false
path = "analytics_metrics.rs"

[[bench]]
name = "graph_serialization"
harness = false
path = "graph_serialization.rs"

[[bench]]
name = "graph_subgraph"
harness = false
path = "graph_subgraph.rs"

[[bench]]
name = "real_project_pipeline"
harness = false
path = "real_project_pipeline.rs"