[package]
name = "icb-clang"
version = "0.1.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
clang-sys = "1"
anyhow = { workspace = true }
log = { workspace = true }
tempfile = "3"
serde = { workspace = true }
serde_json = "1"
rayon = { workspace = true }