[package]
name = "icb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
icb-graph = { path = "../icb-graph" }
icb-clang = { path = "../icb-clang" }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = "0.4.29"