[package]
name = "icb-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
petgraph = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
bincode = "1.3"
zstd = "0.13"