[package]
name = "icb-parser"
version = "0.10.1"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-go = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-rust = "0.21"
anyhow = { workspace = true }
log = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
regex = "1"