[package]
name = "icb-report"
version = "0.4.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-graph = { path = "../icb-graph" }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
petgraph = "0.8.3"