[package]
name = "icb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
icb-graph = { path = "../icb-graph" }
icb-clang = { path = "../icb-clang" }
actix-web = "4"
actix-files = "0.6"
serde = { workspace = true }
serde_json = "1"
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }