[package]
name = "icb-server"
version = "0.3.0"
edition = "2021"

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
icb-graph = { path = "../icb-graph" }
icb-clang = { path = "../icb-clang" }
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-cors = "0.7"
futures-util = "0.3"
tempfile = "3"
serde = { workspace = true }
serde_json = "1"
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
walkdir = "2.5.0"
zip = "8.6.0"

[dev-dependencies]
actix-rt = "2"

[lib]
name = "icb_server"
path = "src/lib.rs"