[package]
name = "icb-server"
version = "0.8.10"
edition = "2021"

[features]
default = ["clang"]
clang = ["icb-clang"]
rustc = ["icb-rustc"]

[dependencies]
icb-common = { path = "../icb-common" }
icb-parser = { path = "../icb-parser" }
icb-graph = { path = "../icb-graph" }
icb-clang = { path = "../icb-clang", optional=true }
icb-rustc = { path = "../icb-rustc", optional = true }
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.7"
actix-cors = "0.7"
futures-util = "0.3"
tempfile = "3"
serde = { workspace = true }
serde_json = "1"
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
walkdir = "2.5.0"
zip = "8.6.0"
sha2 = "0.10"
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
actix-rt = "2"

[lib]
name = "icb_server"
path = "src/lib.rs"